--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,9 +1,10 @@
-@()
+@(totalPurchases: Double, purchases: Seq[Purchase])(implicit flash: Flash)
 
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Student Store</title>
 		<link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
 		<link rel="stylesheet" href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
@@ -38,6 +39,12 @@
 					<h1>Add purchases</h1>
 				</div>
 			</div>
+			@flash.get("warning").map { message =>
+				<div class="alert alert-dismissable alert-warning">
+					<button type="button" class="close" data-dismiss="alert">×</button>
+		            <h4>@message</h4>
+		        </div>
+			}
 			<form action="/scanBarcode" method="POST" class="form-horizontal">
 				<fieldset>
 					<legend>Scan Barcode</legend>
@@ -54,11 +61,34 @@
 					</div>
 				</fieldset>
 			</form>
+			
+			<h1>Total Sales: $@totalPurchases of a target of $100</h1>
+			<div class="progress progress-striped active">
+            	<div class="progress-bar" style="width: @totalPurchases%"></div>
+            </div>
+            
+            <table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>Product</th>
+						<th>Quantity Sold</th>
+					</tr>
+				</thead>
+				<tbody>
+					@purchases.map { purchase =>
+						<tr>
+							<td>@purchase.product.name</td>
+							<td>@purchase.quantity</td>
+						</tr>
+					}
+				</tbody>
+			</table>
 		</div>
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://bootswatch.com/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 		<script>
+			document.getElementById("barcode").focus();
 			$('#duedate-container input').datepicker({
 				format: "mm/dd/yyyy"
 			});
