--- a/app/views/manageBarcodes.scala.html
+++ b/app/views/manageBarcodes.scala.html
@@ -4,6 +4,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Student Store</title>
 		<link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
 		<link rel="stylesheet" href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
@@ -38,29 +39,30 @@
 					<h1>Manage Barcodes</h1>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-4">
-					<h3>Barcode</h3>
-				</div>
-				<div class="col-lg-4">
-					<h3>Name</h3>
-				</div>
-			</div>
-			@barcodes.map { barcode =>
-				<div class="row">
-					<div class="col-lg-4">
-						<p>@barcode.barcode</p>
-					</div>
-					<div class="col-lg-4">
-						<p>@barcode.product.name</p>
-					</div>
-					<div class="col-lg-4">
-						@helper.form(routes.Application.deleteBarcode(barcode.barcode)) {
-		      				<button type="submit" class="btn btn-danger">Delete</button>
-		    			}
-					</div>
-				</div>
-			}
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>Barcode</th>
+						<th>Product</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					@barcodes.map { barcode =>
+						<tr>
+							<td>@barcode.barcode</td>
+							<td>@barcode.product.name</td>
+							<td>
+								@helper.form(routes.Application.deleteBarcode(barcode.barcode)) {
+		      						<button type="submit" class="btn btn-danger btn-xs">
+		      							<span class="glyphicon glyphicon-trash"></span> Delete
+		      						</a>
+		    					}
+		    				</td>
+						</tr>
+					}
+				</tbody>
+			</table>
 			
 			<form action="/createBarcode" method="POST" class="form-horizontal">
 				<fieldset>
