--- a/app/views/managePurchases.scala.html
+++ b/app/views/managePurchases.scala.html
@@ -4,6 +4,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Student Store</title>
 		<link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
 		<link rel="stylesheet" href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
@@ -38,23 +39,24 @@
 					<h1>Manage Purchases</h1>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-3">
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>Date</th>
+						<th>Product</th>
+						<th>Quantity Sold</th>
+					</tr>
+				</thead>
+				<tbody>
 					@purchases.map { purchase =>
-						<p>@purchase.date.getMonthOfYear()/@purchase.date.getDayOfMonth()/@purchase.date.getYear()</p>
-				    }
-				</div>
-				<div class="col-lg-3">
-					@purchases.map { purchase =>
-						<p>@purchase.product.name</p>
+						<tr>
+							<td>@purchase.date.getMonthOfYear()/@purchase.date.getDayOfMonth()/@purchase.date.getYear()</td>
+							<td>@purchase.product.name</td>
+							<td>@purchase.quantity</td>
+						</tr>
 					}
-				</div>
-				<div class="col-lg-3">
-					@purchases.map { purchase =>
-						<p>@purchase.quantity</p>
-					}
-				</div>
-			</div>
+				</tbody>
+			</table>
 
 			<form action="/addPurchase" method="POST" class="form-horizontal">
 				<fieldset>
