--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,97 +1,100 @@
-@(totalPurchases: Double, purchases: Seq[Purchase])(implicit flash: Flash)
+@(totalPurchases: Double, purchases: Seq[Purchase], mode: String)(implicit flash: Flash)
 
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Student Store</title>
-		<link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
-		<link rel="stylesheet" href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
-	</head>
-	<body>
-		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-          			<a href="scan" class="navbar-brand">Student Store</a>
-			        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-			        	<span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			        </button>
-        		</div>
-        		<div class="navbar-collapse collapse" id="navbar-main">
-        			<ul class="nav navbar-nav">
-            			<li><a href="/manageProducts">Manage Products</a></li>
-            			<li><a href="/manageBarcodes">Manage Barcodes</a></li>
-            			<li><a href="/managePurchases">Manage Purchases</a></li>
-            			<li><a href="/export">Export</a></li>
-          			</ul>
-          			<ul class="nav navbar-nav navbar-right">
-            			<li><a href="/logout">Logout</a></li>
-          			</ul>
-        		</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="page-header">
-				<div class="row">
-					<h1>Add purchases</h1>
-				</div>
-			</div>
-			@flash.get("warning").map { message =>
-				<div class="alert alert-dismissable alert-warning">
-					<button type="button" class="close" data-dismiss="alert">×</button>
-		            <h4>@message</h4>
-		        </div>
-			}
-			<form action="/scanBarcode" method="POST" class="form-horizontal">
-				<fieldset>
-					<legend>Scan Barcode</legend>
-					<div class="form-group">
-						<label for="barcode" class="col-lg-2 control-label">Barcode</label>
-						<div class="col-lg-10">
-							<input type="text" class="form-control" id="barcode" name="barcode" placeholder="Barcode">
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-lg-10 col-lg-offset-2">
-							<button type="submit" class="btn btn-primary" value="Submit">Submit</button>
-						</div>
-					</div>
-				</fieldset>
-			</form>
-			
-			<h1>Total Sales: $@totalPurchases of a target of $100</h1>
-			<div class="progress progress-striped active">
-            	<div class="progress-bar" style="width: @totalPurchases%"></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Store</title>
+    <link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
+    <link rel="stylesheet"
+          href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
+</head>
+<body>
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a href="scan" class="navbar-brand">Student Store</a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+            <ul class="nav navbar-nav">
+                <li><a href="/manageProducts">Manage Products</a></li>
+                <li><a href="/manageBarcodes">Manage Barcodes</a></li>
+                <li><a href="/managePurchases">Manage Purchases</a></li>
+                <li><a href="/export">Export</a></li>
+            </ul>
+            <form action="/switchMode" method="POST" class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input name="mode" type="text" class="form-control" value="@mode">
+                </div>
+                <button type="submit" class="btn btn-default">Switch</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="page-header">
+        <div class="row">
+            <h1>Add purchases</h1>
+        </div>
+    </div>
+    @flash.get("warning").map { message =>
+    <div class="alert alert-dismissable alert-warning">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        <h4>@message</h4>
+    </div>
+    }
+    <form action="/scanBarcode" method="POST" class="form-horizontal">
+        <fieldset>
+            <legend>Scan Barcode</legend>
+            <div class="form-group">
+                <label for="barcode" class="col-lg-2 control-label">Barcode</label>
+
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" id="barcode" name="barcode" placeholder="Barcode">
+                </div>
             </div>
-            
-            <table class="table table-striped table-hover">
-				<thead>
-					<tr>
-						<th>Product</th>
-						<th>Quantity Sold</th>
-					</tr>
-				</thead>
-				<tbody>
-					@purchases.map { purchase =>
-						<tr>
-							<td>@purchase.product.name</td>
-							<td>@purchase.quantity</td>
-						</tr>
-					}
-				</tbody>
-			</table>
-		</div>
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="http://bootswatch.com/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-		<script>
-			document.getElementById("barcode").focus();
-			$('#duedate-container input').datepicker({
-				format: "mm/dd/yyyy"
-			});
-		</script>
-	</body>
+            <div class="form-group">
+                <div class="col-lg-10 col-lg-offset-2">
+                    <button type="submit" class="btn btn-primary" value="Submit">Submit</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+
+    <h1>Total Sales: $@totalPurchases of a target of $100</h1>
+
+    <div class="progress progress-striped active">
+        <div class="progress-bar" style="width: @totalPurchases%"></div>
+    </div>
+
+    <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+            <th>Product</th>
+            <th>Quantity Sold</th>
+        </tr>
+        </thead>
+        <tbody>
+        @purchases.map { purchase =>
+        <tr>
+            <td>@purchase.product.name</td>
+            <td>@purchase.quantity</td>
+        </tr>
+        }
+        </tbody>
+    </table>
+</div>
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="http://bootswatch.com/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>document.getElementById("barcode").focus();</script>
+</body>
 </html>
