--- a/app/views/managePurchases.scala.html
+++ b/app/views/managePurchases.scala.html
@@ -1,103 +1,115 @@
-@(purchases: Seq[Purchase], products: Seq[Product])
+@(purchases: Seq[Purchase], products: Seq[Product], mode: String)
 
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Student Store</title>
-		<link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
-		<link rel="stylesheet" href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
-	</head>
-	<body>
-		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-          			<a href="scan" class="navbar-brand">Student Store</a>
-			        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-			        	<span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			        </button>
-        		</div>
-        		<div class="navbar-collapse collapse" id="navbar-main">
-        			<ul class="nav navbar-nav">
-            			<li><a href="/manageProducts">Manage Products</a></li>
-            			<li><a href="/manageBarcodes">Manage Barcodes</a></li>
-            			<li><a href="/managePurchases">Manage Purchases</a></li>
-            			<li><a href="/export">Export</a></li>
-          			</ul>
-          			<ul class="nav navbar-nav navbar-right">
-            			<li><a href="/logout">Logout</a></li>
-          			</ul>
-        		</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="page-header">
-				<div class="row">
-					<h1>Manage Purchases</h1>
-				</div>
-			</div>
-			<table class="table table-striped table-hover">
-				<thead>
-					<tr>
-						<th>Date</th>
-						<th>Product</th>
-						<th>Quantity Sold</th>
-					</tr>
-				</thead>
-				<tbody>
-					@purchases.map { purchase =>
-						<tr>
-							<td>@purchase.date.getMonthOfYear()/@purchase.date.getDayOfMonth()/@purchase.date.getYear()</td>
-							<td>@purchase.product.name</td>
-							<td>@purchase.quantity</td>
-						</tr>
-					}
-				</tbody>
-			</table>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Store</title>
+    <link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
+    <link rel="stylesheet"
+          href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
+</head>
+<body>
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a href="scan" class="navbar-brand">Student Store</a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+            <ul class="nav navbar-nav">
+                <li><a href="/manageProducts">Manage Products</a></li>
+                <li><a href="/manageBarcodes">Manage Barcodes</a></li>
+                <li><a href="/managePurchases">Manage Purchases</a></li>
+                <li><a href="/export">Export</a></li>
+            </ul>
+            <form action="/switchMode" method="POST" class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input name="mode" type="text" class="form-control" value="@mode">
+                </div>
+                <button type="submit" class="btn btn-default">Switch</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="page-header">
+        <div class="row">
+            <h1>Manage Purchases</h1>
+        </div>
+    </div>
+    <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+            <th>Date</th>
+            <th>Product</th>
+            <th>Quantity Sold</th>
+        </tr>
+        </thead>
+        <tbody>
+        @purchases.map { purchase =>
+        <tr>
+            <td>@purchase.date.getMonthOfYear()/@purchase.date.getDayOfMonth()/@purchase.date.getYear()</td>
+            <td>@purchase.product.name</td>
+            <td>@purchase.quantity</td>
+        </tr>
+        }
+        </tbody>
+    </table>
 
-			<form action="/addPurchase" method="POST" class="form-horizontal">
-				<fieldset>
-					<legend>Update/Add Purchases</legend>
-					<div class="form-group">
-						<label for="date" class="col-lg-2 control-label">Date</label>
-						<div class="col-lg-10" id="purchasedate-container">
-							<input type="text" class="form-control" id="date" name="date" placeholder="Date">
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="price" class="col-lg-2 control-label">Product</label>
-						<div class="col-lg-10">
-							<select class="form-control" id="product" name="product">
-								@products.map { p =>
-									<option>@p.name</option>
-								}
-							</select>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="quantity" class="col-lg-2 control-label">Quantity (not an increment, set to 0 to delete)</label>
-						<div class="col-lg-10">
-							<input type="number" class="form-control" id="quantity" name="quantity" placeholder="Quantity">
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-lg-10 col-lg-offset-2">
-							<button type="submit" class="btn btn-primary" value="Submit">Submit</button>
-						</div>
-					</div>
-				</fieldset>
-			</form>
-		</div>
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="http://bootswatch.com/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-		<script>
+    <form action="/addPurchase" method="POST" class="form-horizontal">
+        <fieldset>
+            <legend>Update/Add Purchases</legend>
+            <div class="form-group">
+                <label for="date" class="col-lg-2 control-label">Date</label>
+
+                <div class="col-lg-10" id="purchasedate-container">
+                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="price" class="col-lg-2 control-label">Product</label>
+
+                <div class="col-lg-10">
+                    <select class="form-control" id="product" name="product">
+                        @products.map { p =>
+                        <option>@p.name</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="quantity" class="col-lg-2 control-label">Quantity (not an increment, set to 0 to
+                    delete)</label>
+
+                <div class="col-lg-10">
+                    <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Quantity">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-10 col-lg-offset-2">
+                    <button type="submit" class="btn btn-primary" value="Submit">Submit</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="http://bootswatch.com/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+<script>
 			$('#purchasedate-container input').datepicker({
 				format: "mm/dd/yyyy"
 			});
-		</script>
-	</body>
+
+</script>
+</body>
 </html>
