Fix bootswatch CSS and JS URLs

--- a/app/views/managePurchases.scala.html
+++ b/app/views/managePurchases.scala.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Store</title>
-    <link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.css">
+    <link rel="stylesheet" href="http://bootswatch.com/3/yeti/bootstrap.css">
     <link rel="stylesheet"
           href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
 </head>
@@ -103,7 +103,7 @@
     </form>
 </div>
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="http://bootswatch.com/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="http://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 <script>
 			$('#purchasedate-container input').datepicker({
