--- a/app/views/managePurchases.scala.html
+++ b/app/views/managePurchases.scala.html
@@ -8,7 +8,7 @@
     <title>Student Store</title>
     <link rel="stylesheet" href="http://bootswatch.com/3/yeti/bootstrap.css">
     <link rel="stylesheet"
-          href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.min.css">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -104,7 +104,7 @@
 </div>
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
 <script>
 			$('#purchasedate-container input').datepicker({
 				format: "mm/dd/yyyy"
