--- a/app/views/manageProducts.scala.html
+++ b/app/views/manageProducts.scala.html
@@ -8,7 +8,7 @@
     <title>Student Store</title>
     <link rel="stylesheet" href="http://bootswatch.com/3/yeti/bootstrap.css">
     <link rel="stylesheet"
-          href="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/css/datepicker.css">
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
