--- a/app/views/managePurchases.scala.html
+++ b/app/views/managePurchases.scala.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Store</title>
-    <link rel="stylesheet" href="http://bootswatch.com/3/yeti/bootstrap.css">
+    <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.min.css">
 </head>
@@ -102,8 +102,8 @@
         </fieldset>
     </form>
 </div>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="http://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="https://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
 <script>
 			$('#purchasedate-container input').datepicker({
