Vendor all web dependencies

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,15 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Store</title>
-    <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css">
+    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
     @extraHead
 </head>
 <body>
 
 @content
 
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="https://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="@routes.Assets.at("javascripts/jquery-1.9.1.min.js")""></script>
+<script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
 
 @extraBody
 </body>
